Add a function to load an agent from a file

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPAL/Fxd5N6xClvZJLxHXIM",
+      "authorship_tag": "ABX9TyMVqFRXPk4YEURHc721JVUC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -827,6 +827,41 @@
       ],
       "metadata": {
         "id": "RFjtGaLkEg3H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Load the agent from file"
+      ],
+      "metadata": {
+        "id": "PZOqo_jnNxcx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def load_agent(model_path, env):\n",
+        "    obs_dict = env.reset()[0]\n",
+        "    state_dim = obs_dict[\"observation\"].shape[0]  # 10\n",
+        "    action_dim = env.action_space.shape[0]  # 4\n",
+        "    goal_dim = obs_dict[\"desired_goal\"].shape[0]  # 3\n",
+        "    max_action = float(env.action_space.high[0])  # 1.0\n",
+        "\n",
+        "    # Create agent with the same architecture\n",
+        "    input_dim = state_dim + goal_dim\n",
+        "    actor = Actor(input_dim, action_dim, max_action).to(device)\n",
+        "\n",
+        "    # Load the saved weights\n",
+        "    actor.load_state_dict(torch.load(model_path))\n",
+        "    actor.eval()  # Set to evaluation mode\n",
+        "\n",
+        "    return actor"
+      ],
+      "metadata": {
+        "id": "k8VCf1wONwsU"
       },
       "execution_count": null,
       "outputs": []
