Rename train function to something more explicit

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMVqFRXPk4YEURHc721JVUC",
+      "authorship_tag": "ABX9TyPBQCbabStvOSktxKdtzwcV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -719,7 +719,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def train_her(env):\n",
+        "def train_ddpg_with_her(env):\n",
         "    # Set seeds\n",
         "    seed = 0\n",
         "    env.action_space.seed(seed)\n",
@@ -823,7 +823,7 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "agent, success_history = train_her(env)"
+        "agent, success_history = train_ddpg_with_her(env)"
       ],
       "metadata": {
         "id": "RFjtGaLkEg3H"
