Add one more hidden layer to the networks (total 3)

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPBQCbabStvOSktxKdtzwcV",
+      "authorship_tag": "ABX9TyOjGPGILcQ20qjzZGR5NB4o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -458,6 +458,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Configuration from the fetch paper\n",
         "# Define Actor network\n",
         "class Actor(nn.Module):\n",
         "    def __init__(self, state_dim, action_dim, max_action):\n",
@@ -466,12 +467,17 @@
         "\n",
         "        self.fc1 = nn.Linear(state_dim, 256)\n",
         "        self.fc2 = nn.Linear(256, 256)\n",
-        "        self.fc3 = nn.Linear(256, action_dim)\n",
+        "        self.fc3 = nn.Linear(256, 256)\n",
+        "        self.out = nn.Linear(256, action_dim)\n",
+        "\n",
+        "        self.out.weight.data.uniform_(-3e-3, 3e-3)\n",
+        "        self.out.bias.data.uniform_(-3e-3, 3e-3)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = F.relu(self.fc2(x))\n",
-        "        x = torch.tanh(self.fc3(x)) * self.max_action\n",
+        "        x = F.relu(self.fc3(x))\n",
+        "        x = torch.tanh(self.out(x)) * self.max_action\n",
         "        return x\n",
         "\n",
         "# Define Critic network\n",
@@ -479,15 +485,20 @@
         "    def __init__(self, state_dim, action_dim):\n",
         "        super(Critic, self).__init__()\n",
         "\n",
-        "        self.fc1 = nn.Linear(state_dim + action_dim, 256)\n",
-        "        self.fc2 = nn.Linear(256, 256)\n",
-        "        self.fc3 = nn.Linear(256, 1)\n",
+        "        self.fc1 = nn.Linear(state_dim, 256)\n",
+        "        self.fc2 = nn.Linear(256 + action_dim, 256)\n",
+        "        self.fc3 = nn.Linear(256, 256)\n",
+        "        self.out = nn.Linear(256, 1)\n",
+        "\n",
+        "        self.out.weight.data.uniform_(-3e-4, 3e-4)\n",
+        "        self.out.bias.data.uniform_(-3e-4, 3e-4)\n",
         "\n",
         "    def forward(self, state, action):\n",
-        "        x = torch.cat([state, action], dim=1)\n",
-        "        x = F.relu(self.fc1(x))\n",
+        "        xs = F.relu(self.fc1(state))\n",
+        "        x = torch.cat([xs, action], dim=1)\n",
         "        x = F.relu(self.fc2(x))\n",
-        "        x = self.fc3(x)\n",
+        "        x = F.relu(self.fc3(x))\n",
+        "        x = self.out(x)\n",
         "        return x"
       ],
       "metadata": {
@@ -512,7 +523,7 @@
         "class ReplayBuffer:\n",
         "    def __init__(self, max_size=1000000):\n",
         "        self.buffer = []\n",
-        "        self.max_size = max_size\n",
+        "        self.max_size = max_size # from fetch paper\n",
         "        self.ptr = 0\n",
         "\n",
         "        # For storing entire episodes for HER\n",
@@ -540,7 +551,7 @@
         "            # Original experience with intended goal\n",
         "            self.store_transition(obs_dict, action, next_obs_dict, reward, done)\n",
         "\n",
-        "            # HER: For k random future states\n",
+        "            # HER: For k random future states - this is a future strategy implementation from the HER paper\n",
         "            if k > 0:\n",
         "                future_indices = np.random.randint(i, episode_len, size=min(k, episode_len-i))\n",
         "\n",
