Adjust some hyperparameters

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOjGPGILcQ20qjzZGR5NB4o",
+      "authorship_tag": "ABX9TyOFMXsR7LbqRQN9gPQDrxTi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -641,6 +641,7 @@
         "        # Our input to the actor and critic is state+goal, so we need to account for that in the dimensions\n",
         "        input_dim = state_dim + goal_dim\n",
         "\n",
+        "        # The networks\n",
         "        self.actor = Actor(input_dim, action_dim, max_action).to(device)\n",
         "        self.actor_target = copy.deepcopy(self.actor)\n",
         "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=0.001)\n",
@@ -649,12 +650,12 @@
         "        self.critic_target = copy.deepcopy(self.critic)\n",
         "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=0.001)\n",
         "\n",
-        "        self.max_action = max_action\n",
+        "        self.max_action = max_action # continuous action-values -> this is 1.0 for Fetch\n",
         "        self.replay_buffer = ReplayBuffer()\n",
         "\n",
-        "        self.batch_size = 128\n",
-        "        self.gamma = 0.98\n",
-        "        self.tau = 0.05\n",
+        "        self.batch_size = 256 # from the fetch paper\n",
+        "        self.gamma = 0.98 # arbitrary, I don't see it in the paper\n",
+        "        self.tau = 0.95 # from the fetch paper - surprisingly very high\n",
         "\n",
         "    def select_action(self, observation, noise=0.1):\n",
         "        \"\"\"Select action based on observation dictionary\"\"\"\n",
@@ -732,7 +733,7 @@
       "source": [
         "def train_ddpg_with_her(env):\n",
         "    # Set seeds\n",
-        "    seed = 0\n",
+        "    seed = 5\n",
         "    env.action_space.seed(seed)\n",
         "    torch.manual_seed(seed)\n",
         "    np.random.seed(seed)\n",
@@ -749,10 +750,11 @@
         "    agent = DDPG_HER(state_dim, action_dim, goal_dim, max_action)\n",
         "\n",
         "    # Training parameters - increased for better learning\n",
-        "    n_epochs = 50\n",
-        "    n_cycles = 50\n",
-        "    n_episodes = 16\n",
-        "    n_timesteps = 50\n",
+        "    n_epochs = 20 # from the fetch paper results we should converge by that time\n",
+        "    n_cycles = 50 # from the fetch paper\n",
+        "    # In the paper they trained on cpu 19 cores, I don't really understand their calculations so these two are arbitrary\n",
+        "    n_episodes = 8\n",
+        "    n_timesteps = 100\n",
         "\n",
         "    # For evaluation\n",
         "    success_history = []\n",
@@ -795,7 +797,7 @@
         "                        break\n",
         "\n",
         "                # Process episode with HER\n",
-        "                agent.replay_buffer.process_episode_with_her(env, k=4)\n",
+        "                agent.replay_buffer.process_episode_with_her(env, k=4) # k=4 means the probability of HER experience replay is 0.8 like in the fetch paper\n",
         "\n",
         "                if episode_success:\n",
         "                    successes += 1\n",
