Add OU noise process instead of Gaussian

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOFMXsR7LbqRQN9gPQDrxTi",
+      "authorship_tag": "ABX9TyMiv075vN0zgSKQhVFKF6g0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,6 +510,53 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Ornstein-Uhlenbeck noise process for temporally correlated exploration"
+      ],
+      "metadata": {
+        "id": "Q-lsdpmMn3nI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class OrnsteinUhlenbeckNoise:\n",
+        "    \"\"\"\n",
+        "    Ornstein-Uhlenbeck process for temporally correlated exploration.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - action_dimension: Dimension of the action space\n",
+        "    - mu: Mean of the noise\n",
+        "    - theta: How quickly the process reverts to the mean (larger -> faster)\n",
+        "    - sigma: Scale of the noise\n",
+        "    \"\"\"\n",
+        "    def __init__(self, action_dimension, mu=0, theta=0.15, sigma=0.2):\n",
+        "        self.action_dimension = action_dimension\n",
+        "        self.mu = mu\n",
+        "        self.theta = theta\n",
+        "        self.sigma = sigma\n",
+        "        self.state = np.ones(self.action_dimension) * self.mu\n",
+        "        self.reset()\n",
+        "\n",
+        "    def reset(self):\n",
+        "        \"\"\"Reset the internal state to the mean.\"\"\"\n",
+        "        self.state = np.ones(self.action_dimension) * self.mu\n",
+        "\n",
+        "    def sample(self):\n",
+        "        \"\"\"Generate a sample of noise.\"\"\"\n",
+        "        x = self.state\n",
+        "        dx = self.theta * (self.mu - x) + self.sigma * np.random.randn(self.action_dimension)\n",
+        "        self.state = x + dx\n",
+        "        return self.state"
+      ],
+      "metadata": {
+        "id": "2gqK3pHwn2fI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Implementation: *HER*"
       ],
       "metadata": {
@@ -657,7 +704,7 @@
         "        self.gamma = 0.98 # arbitrary, I don't see it in the paper\n",
         "        self.tau = 0.95 # from the fetch paper - surprisingly very high\n",
         "\n",
-        "    def select_action(self, observation, noise=0.1):\n",
+        "    def select_action(self, observation, noise):\n",
         "        \"\"\"Select action based on observation dictionary\"\"\"\n",
         "        # Create input by concatenating state and goal\n",
         "        state = observation[\"observation\"]\n",
@@ -670,9 +717,21 @@
         "\n",
         "        # Add noise for exploration\n",
         "        if noise > 0:\n",
-        "            action = action + np.random.normal(0, noise, size=action.shape)\n",
+        "          # We check if the subprocess is not already running\n",
+        "          if not hasattr(self, 'noise_process'):\n",
+        "            self.noise_process = OrnsteinUhlenbeckNoise(\n",
+        "                action_dimension=len(action),\n",
+        "                mu=0,\n",
+        "                theta=0.15, # from the continuous control paper\n",
+        "                sigma=0.2   # from the continuous control paper\n",
+        "            )\n",
+        "            action = action + noise * self.noise_process.sample()\n",
         "\n",
         "        return np.clip(action, -self.max_action, self.max_action)\n",
+        "\n",
+        "    def reset_noise_process(self):\n",
+        "        if hasattr(self, 'noise_process'):\n",
+        "            self.noise_process.reset()\n",
         "\n",
         "    def train(self):\n",
         "        if len(self.replay_buffer) < self.batch_size:\n",
@@ -731,7 +790,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def train_ddpg_with_her(env):\n",
+        "def train_ddpg_with_her(env, debug = True):\n",
         "    # Set seeds\n",
         "    seed = 5\n",
         "    env.action_space.seed(seed)\n",
@@ -756,6 +815,12 @@
         "    n_episodes = 8\n",
         "    n_timesteps = 100\n",
         "\n",
+        "    if debug\n",
+        "      n_epochs = 1\n",
+        "      n_cycles = 5\n",
+        "      n_episodes = 8\n",
+        "      n_timesteps = 100\n",
+        "\n",
         "    # For evaluation\n",
         "    success_history = []\n",
         "\n",
@@ -770,12 +835,15 @@
         "                # Reset environment\n",
         "                obs_dict, _ = env.reset()\n",
         "\n",
+        "                # Reset OU exploration noise\n",
+        "                agent.reset_noise()\n",
+        "\n",
         "                # Initialize tracking\n",
         "                episode_success = False\n",
         "\n",
         "                for t in range(n_timesteps):\n",
         "                    # Select action with noise for exploration\n",
-        "                    action = agent.select_action(obs_dict, noise=0.2)\n",
+        "                    action = agent.select_action(obs_dict, noise=1.0) # TODO: gradually decay the noise\n",
         "\n",
         "                    # Execute action\n",
         "                    next_obs_dict, reward, terminated, truncated, info = env.step(action)\n",
@@ -836,7 +904,7 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "agent, success_history = train_ddpg_with_her(env)"
+        "agent, success_history = train_ddpg_with_her(env, debug = True)"
       ],
       "metadata": {
         "id": "RFjtGaLkEg3H"
