Make it consistent when "actor" and "agent" are used. agent is DDPG_HER, actor is nn.Module.

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMiv075vN0zgSKQhVFKF6g0",
+      "authorship_tag": "ABX9TyMxRxnlEs93LtN0woHHjuxt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "13e521ee-1c82-45db-b356-8c98a1229370"
+        "outputId": "c0c74355-3e9f-4e83-a9bd-f342bdef14e3"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "27e6fa92-efde-4483-c552-d2e73e61e545"
+        "outputId": "1f4b8a80-125b-47a8-e99b-aef14d8e5926"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,110 +205,12 @@
             "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from etils[epath]->mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (2024.10.0)\n",
             "Requirement already satisfied: importlib_resources in /usr/local/lib/python3.11/dist-packages (from etils[epath]->mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (6.5.2)\n",
             "Requirement already satisfied: zipp in /usr/local/lib/python3.11/dist-packages (from etils[epath]->mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (3.21.0)\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libfontenc1 libxfont2 libxkbfile1 x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils\n",
-            "  xserver-common\n",
-            "The following NEW packages will be installed:\n",
-            "  libfontenc1 libxfont2 libxkbfile1 x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils\n",
-            "  xserver-common xvfb\n",
-            "0 upgraded, 9 newly installed, 0 to remove and 29 not upgraded.\n",
-            "Need to get 7,814 kB of archives.\n",
-            "After this operation, 12.0 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 libfontenc1 amd64 1:1.1.4-1build3 [14.7 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu jammy/main amd64 libxfont2 amd64 1:2.0.5-1build1 [94.5 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu jammy/main amd64 libxkbfile1 amd64 1:1.1.0-1build3 [71.8 kB]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu jammy/main amd64 x11-xkb-utils amd64 7.7+5build4 [172 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-encodings all 1:1.0.5-0ubuntu2 [578 kB]\n",
-            "Get:6 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-utils amd64 1:7.7+6build2 [94.6 kB]\n",
-            "Get:7 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-base all 1:1.0.5 [5,896 kB]\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 xserver-common all 2:21.1.4-2ubuntu1.7~22.04.13 [29.1 kB]\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 xvfb amd64 2:21.1.4-2ubuntu1.7~22.04.13 [863 kB]\n",
-            "Fetched 7,814 kB in 2s (4,380 kB/s)\n",
-            "Selecting previously unselected package libfontenc1:amd64.\n",
-            "(Reading database ... 125044 files and directories currently installed.)\n",
-            "Preparing to unpack .../0-libfontenc1_1%3a1.1.4-1build3_amd64.deb ...\n",
-            "Unpacking libfontenc1:amd64 (1:1.1.4-1build3) ...\n",
-            "Selecting previously unselected package libxfont2:amd64.\n",
-            "Preparing to unpack .../1-libxfont2_1%3a2.0.5-1build1_amd64.deb ...\n",
-            "Unpacking libxfont2:amd64 (1:2.0.5-1build1) ...\n",
-            "Selecting previously unselected package libxkbfile1:amd64.\n",
-            "Preparing to unpack .../2-libxkbfile1_1%3a1.1.0-1build3_amd64.deb ...\n",
-            "Unpacking libxkbfile1:amd64 (1:1.1.0-1build3) ...\n",
-            "Selecting previously unselected package x11-xkb-utils.\n",
-            "Preparing to unpack .../3-x11-xkb-utils_7.7+5build4_amd64.deb ...\n",
-            "Unpacking x11-xkb-utils (7.7+5build4) ...\n",
-            "Selecting previously unselected package xfonts-encodings.\n",
-            "Preparing to unpack .../4-xfonts-encodings_1%3a1.0.5-0ubuntu2_all.deb ...\n",
-            "Unpacking xfonts-encodings (1:1.0.5-0ubuntu2) ...\n",
-            "Selecting previously unselected package xfonts-utils.\n",
-            "Preparing to unpack .../5-xfonts-utils_1%3a7.7+6build2_amd64.deb ...\n",
-            "Unpacking xfonts-utils (1:7.7+6build2) ...\n",
-            "Selecting previously unselected package xfonts-base.\n",
-            "Preparing to unpack .../6-xfonts-base_1%3a1.0.5_all.deb ...\n",
-            "Unpacking xfonts-base (1:1.0.5) ...\n",
-            "Selecting previously unselected package xserver-common.\n",
-            "Preparing to unpack .../7-xserver-common_2%3a21.1.4-2ubuntu1.7~22.04.13_all.deb ...\n",
-            "Unpacking xserver-common (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Selecting previously unselected package xvfb.\n",
-            "Preparing to unpack .../8-xvfb_2%3a21.1.4-2ubuntu1.7~22.04.13_amd64.deb ...\n",
-            "Unpacking xvfb (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Setting up libfontenc1:amd64 (1:1.1.4-1build3) ...\n",
-            "Setting up xfonts-encodings (1:1.0.5-0ubuntu2) ...\n",
-            "Setting up libxkbfile1:amd64 (1:1.1.0-1build3) ...\n",
-            "Setting up libxfont2:amd64 (1:2.0.5-1build1) ...\n",
-            "Setting up x11-xkb-utils (7.7+5build4) ...\n",
-            "Setting up xfonts-utils (1:7.7+6build2) ...\n",
-            "Setting up xfonts-base (1:1.0.5) ...\n",
-            "Setting up xserver-common (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Setting up xvfb (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "Processing triggers for fontconfig (2.13.1-4.2ubuntu5) ...\n",
-            "Processing triggers for libc-bin (2.35-0ubuntu3.8) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libumf.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libhwloc.so.15 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm_debug.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
-            "\n",
+            "E: dpkg was interrupted, you must manually run 'dpkg --configure -a' to correct the problem. \n",
             "Requirement already satisfied: imageio in /usr/local/lib/python3.11/dist-packages (2.37.0)\n",
-            "Collecting ffmpeg\n",
-            "  Downloading ffmpeg-1.4.tar.gz (5.1 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting pyvirtualdisplay\n",
-            "  Downloading PyVirtualDisplay-3.0-py3-none-any.whl.metadata (943 bytes)\n",
+            "Requirement already satisfied: ffmpeg in /usr/local/lib/python3.11/dist-packages (1.4)\n",
+            "Requirement already satisfied: pyvirtualdisplay in /usr/local/lib/python3.11/dist-packages (3.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from imageio) (2.0.2)\n",
-            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio) (11.1.0)\n",
-            "Downloading PyVirtualDisplay-3.0-py3-none-any.whl (15 kB)\n",
-            "Building wheels for collected packages: ffmpeg\n",
-            "  Building wheel for ffmpeg (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for ffmpeg: filename=ffmpeg-1.4-py3-none-any.whl size=6082 sha256=a8c79031028e6bd4e9b3f658df13d4413338c06419641499f1ea01a488ef7ff7\n",
-            "  Stored in directory: /root/.cache/pip/wheels/56/30/c5/576bdd729f3bc062d62a551be7fefd6ed2f761901568171e4e\n",
-            "Successfully built ffmpeg\n",
-            "Installing collected packages: pyvirtualdisplay, ffmpeg\n",
-            "Successfully installed ffmpeg-1.4 pyvirtualdisplay-3.0\n"
+            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio) (11.1.0)\n"
           ]
         }
       ]
@@ -331,7 +233,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -362,7 +264,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -399,7 +301,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -413,7 +315,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -441,10 +343,22 @@
         "print(f\"Using device: {device}\")"
       ],
       "metadata": {
-        "id": "PxCveEDglZzN"
+        "id": "PxCveEDglZzN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "57af1930-6a5e-44ea-a389-0f95f76e142f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using device: cuda\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -504,7 +418,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -551,7 +465,7 @@
       "metadata": {
         "id": "2gqK3pHwn2fI"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -667,7 +581,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -729,7 +643,7 @@
         "\n",
         "        return np.clip(action, -self.max_action, self.max_action)\n",
         "\n",
-        "    def reset_noise_process(self):\n",
+        "    def reset_noise(self):\n",
         "        if hasattr(self, 'noise_process'):\n",
         "            self.noise_process.reset()\n",
         "\n",
@@ -775,7 +689,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -815,11 +729,11 @@
         "    n_episodes = 8\n",
         "    n_timesteps = 100\n",
         "\n",
-        "    if debug\n",
+        "    if debug:\n",
         "      n_epochs = 1\n",
-        "      n_cycles = 5\n",
-        "      n_episodes = 8\n",
-        "      n_timesteps = 100\n",
+        "      n_cycles = 2\n",
+        "      n_episodes = 2\n",
+        "      n_timesteps = 2\n",
         "\n",
         "    # For evaluation\n",
         "    success_history = []\n",
@@ -883,12 +797,12 @@
         "    # Save trained model\n",
         "    torch.save(agent.actor.state_dict(), f\"{env_name}_actor.pth\")\n",
         "\n",
-        "    return agent, success_history"
+        "    return agent.actor, success_history"
       ],
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -904,18 +818,33 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "agent, success_history = train_ddpg_with_her(env, debug = True)"
+        "actor, success_history = train_ddpg_with_her(env, debug = True)"
       ],
       "metadata": {
-        "id": "RFjtGaLkEg3H"
+        "id": "RFjtGaLkEg3H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e5209ba0-2d8a-45d7-e70c-a27fa22daeae"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
+            "Action space: Box(-1.0, 1.0, (4,), float32)\n",
+            "Starting training...\n",
+            "Epoch 1/1, Success Rate: 0.00\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Load the agent from file"
+        "# Load the actor from a file"
       ],
       "metadata": {
         "id": "PZOqo_jnNxcx"
@@ -944,7 +873,7 @@
       "metadata": {
         "id": "k8VCf1wONwsU"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -1094,7 +1023,7 @@
       "metadata": {
         "id": "cnwxqu6fEpvI"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -1110,13 +1039,38 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "evaluate(agent, env, n_episodes=10)"
+        "evaluate(actor, env, n_episodes=10)"
       ],
       "metadata": {
-        "id": "aXNrLZZXE0Az"
+        "id": "aXNrLZZXE0Az",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29141f11-9bb4-4c29-e9cb-3472c6fc897a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
+            "Action space: Box(-1.0, 1.0, (4,), float32)\n",
+            "Saved sequential animation to FetchReach-v3_eval.gif\n",
+            "Evaluation success rate: 0.00\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
     }
   ]
 }
