Add average rewards / epoch collection for a typical learning curve

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMxRxnlEs93LtN0woHHjuxt",
+      "authorship_tag": "ABX9TyMZjwNDFlbw+P9seO+KkpST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "c0c74355-3e9f-4e83-a9bd-f342bdef14e3"
+        "outputId": "1f1a77eb-b510-4313-addd-eee899bd0483"
       },
-      "execution_count": 58,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "1f4b8a80-125b-47a8-e99b-aef14d8e5926"
+        "outputId": "1d29ecc6-f208-4189-fa53-1882a58f36e5"
       },
-      "execution_count": 59,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 60,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 61,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 62,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": 63,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57af1930-6a5e-44ea-a389-0f95f76e142f"
+        "outputId": "dcbaf5f8-dec1-47fe-dbcd-6fcefbe4682b"
       },
-      "execution_count": 64,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": 65,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
       "metadata": {
         "id": "2gqK3pHwn2fI"
       },
-      "execution_count": 66,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": 67,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -689,7 +689,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": 68,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -737,12 +737,15 @@
         "\n",
         "    # For evaluation\n",
         "    success_history = []\n",
+        "    # and a typical learning curve\n",
+        "    reward_history = []\n",
         "\n",
         "    # Start training\n",
         "    print(\"Starting training...\")\n",
         "\n",
         "    for epoch in range(n_epochs):\n",
         "        successes = 0\n",
+        "        epoch_rewards = []  # track rewards for all episodes in this epoch\n",
         "\n",
         "        for cycle in range(n_cycles):\n",
         "            for episode in range(n_episodes):\n",
@@ -754,6 +757,7 @@
         "\n",
         "                # Initialize tracking\n",
         "                episode_success = False\n",
+        "                episode_reward = 0\n",
         "\n",
         "                for t in range(n_timesteps):\n",
         "                    # Select action with noise for exploration\n",
@@ -762,6 +766,9 @@
         "                    # Execute action\n",
         "                    next_obs_dict, reward, terminated, truncated, info = env.step(action)\n",
         "                    done = terminated or truncated\n",
+        "\n",
+        "                    # Accumulate rewards\n",
+        "                    episode_reward += reward\n",
         "\n",
         "                    # Store transition in episode buffer\n",
         "                    agent.replay_buffer.add_episode_step(\n",
@@ -781,6 +788,8 @@
         "                # Process episode with HER\n",
         "                agent.replay_buffer.process_episode_with_her(env, k=4) # k=4 means the probability of HER experience replay is 0.8 like in the fetch paper\n",
         "\n",
+        "                epoch_rewards.append(episode_reward)\n",
+        "\n",
         "                if episode_success:\n",
         "                    successes += 1\n",
         "\n",
@@ -788,21 +797,24 @@
         "            for _ in range(40):  # Increased updates per cycle\n",
         "                agent.train()\n",
         "\n",
-        "        # Calculate success rate for this epoch\n",
+        "        # Calculate success rate and rewards for this epoch\n",
         "        success_rate = successes / (n_cycles * n_episodes)\n",
         "        success_history.append(success_rate)\n",
+        "\n",
+        "        avg_reward = sum(epoch_rewards) / len(epoch_rewards)\n",
+        "        reward_history.append(avg_reward)\n",
         "\n",
         "        print(f\"Epoch {epoch+1}/{n_epochs}, Success Rate: {success_rate:.2f}\")\n",
         "\n",
         "    # Save trained model\n",
         "    torch.save(agent.actor.state_dict(), f\"{env_name}_actor.pth\")\n",
         "\n",
-        "    return agent.actor, success_history"
+        "    return agent.actor, success_history, reward_history"
       ],
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": 69,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -818,16 +830,16 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "actor, success_history = train_ddpg_with_her(env, debug = True)"
+        "actor, success_history, reward_history = train_ddpg_with_her(env, debug = True)"
       ],
       "metadata": {
         "id": "RFjtGaLkEg3H",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5209ba0-2d8a-45d7-e70c-a27fa22daeae"
+        "outputId": "47b767e4-41e9-41df-da74-2e17d7978772"
       },
-      "execution_count": 70,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +885,7 @@
       "metadata": {
         "id": "k8VCf1wONwsU"
       },
-      "execution_count": 71,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -1023,7 +1035,7 @@
       "metadata": {
         "id": "cnwxqu6fEpvI"
       },
-      "execution_count": 72,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -1046,9 +1058,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "29141f11-9bb4-4c29-e9cb-3472c6fc897a"
+        "outputId": "66f91aea-e2ed-4779-fd0f-801e7cfb94a6"
       },
-      "execution_count": 73,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,7 +1080,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 89
         }
       ]
     }
